--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
@@ -1,4 +1,4 @@
-# 现代化基础设施
+![image](https://github.com/wangyufengx/ruankao/assets/30011407/b3b53cde-8afe-4d56-9356-0e357c04c256)# 现代化基础设施
 
 > 考试大纲
 >
@@ -7,3 +7,8 @@
 > 2.工业互连网
 >
 > 3.车联网
+
+## 新型基础设施建设
+
+新型基础设施建设：简称“新基建”，主要包括5G基建、特高压、城际高速铁路和城际轨道交通、新能源汽车充电桩、大数据中心、人工智能、工业互联网等七大领域。
+
