--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
@@ -12,3 +12,15 @@
 
 新型基础设施建设：简称“新基建”，主要包括5G基建、特高压、城际高速铁路和城际轨道交通、新能源汽车充电桩、大数据中心、人工智能、工业互联网等七大领域。
 
+### 新型基础设施概念
+
+新型基础设施是以新发展理念为引领，以技术创新为驱动，以信息网络为基础，面向高质量发展需要，提供数字转型、智能升级、融合创新等服务的基础设施体系。
+
+### 新型基础设施的三个主要方面
+
+- 信息基础设施：信息基础设施主要指基于新一代信息技术演化生成的基础设施。
+  - 通信网络基础设施：
+  - 新技术基础设施：
+  - 算力基础设施：
+- 融合基础设施
+- 创新基础设施
