--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
@@ -1,4 +1,4 @@
-![image](https://github.com/wangyufengx/ruankao/assets/30011407/b3b53cde-8afe-4d56-9356-0e357c04c256)# 现代化基础设施
+![image](https://github.com/wangyufengx/ruankao/assets/30011407/a23337d4-5a7c-42d8-9500-7a56e4db591a)![image](https://github.com/wangyufengx/ruankao/assets/30011407/b3b53cde-8afe-4d56-9356-0e357c04c256)# 现代化基础设施
 
 > 考试大纲
 >
@@ -18,9 +18,17 @@
 
 ### 新型基础设施的三个主要方面
 
-- 信息基础设施：信息基础设施主要指基于新一代信息技术演化生成的基础设施。
-  - 通信网络基础设施：
-  - 新技术基础设施：
-  - 算力基础设施：
-- 融合基础设施
-- 创新基础设施
+- 信息基础设施：信息基础设施主要指基于新一代信息技术演化生成的基础设施。信息基础设施凸显“技术新”。
+  - 通信网络基础设施：以5G、物联网、工业互联网、卫星互联网为代表的通信网络基础设施；
+  - 新技术基础设施：以人工智能、云计算、区块链等为代表的新技术基础设施；
+  - 算力基础设施：以数据中心、智能计算中心为代表的算力基础设施等。
+- 融合基础设施：融合基础设施主要指深度应用互联网、大数据、人工智能等技术，支撑传统基础设施转型升级，进而形成的融合基础设施。融合基础设施重在“应用新”。
+  - 智能交通基础设施；
+  - 智慧能源基础设施；
+- 创新基础设施：创新基础设施主要指支撑科学研究、技术开发、产品研制的具有公益属性的基础设施。创新基础设施强调“平台新”。
+  - 重大科技基础设施
+  - 科教基础设施
+  - 产业技术创新基础设施等。
+
+
+  
