--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/4.数字中国.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/4.数字中国.md
@@ -9,3 +9,30 @@
 > 3.数字社会
 >
 > 4.数字生态
+
+## 数字经济
+
+### 数字经济主要内容构成
+
+#### 从产业构成看
+数字经济包括数字产业化和产业数字化两大部分。
+
+
+#### 从整体构成看
+
+数字经济包括数字产业化、产业数字化、数字化治理和数据价值化四个部分。
+
+- 数字产业化：数字产业化是指为产业数字化发展提供数字技术、产品、服务、基础设施和解决方案，以及完全依赖于数字技术、数据要素的各类经济活动，包括电子信息制造业、电信业、软件、信息技术、互联网行业等。数字产业化是数字经济的基础部分。
+- 产业数字化：
+- 数字化治理：
+- 数据价值化：
+
+数字产业化发展重点包括：
+
+- 云计算
+- 大数据
+- 工业互联网
+- 区块链
+- 人工智能
+- 虚拟现实和增强现实
+
