--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/4.数字中国.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/4.数字中国.md
@@ -23,9 +23,9 @@
 数字经济包括数字产业化、产业数字化、数字化治理和数据价值化四个部分。
 
 - 数字产业化：数字产业化是指为产业数字化发展提供数字技术、产品、服务、基础设施和解决方案，以及完全依赖于数字技术、数据要素的各类经济活动，包括电子信息制造业、电信业、软件、信息技术、互联网行业等。数字产业化是数字经济的基础部分。
-- 产业数字化：
+- 产业数字化：产业数字化是指在新一代数字科技支撑和引领下，以数据为关键要素，以价值释放为核心，以数据赋能为主线，对产业链上下游的全要素数字化升级、转型和再造的过程。产业数字化作为实现数字经济和传统经济深度融合发展的重要途径，是新时代背景下使用数字经济发展的必由之路和战略抉择。
 - 数字化治理：
-- 数据价值化：
+- 数据价值化：数据价值化是指以数据资源化为起点，经历数据资产化、数据资本化阶段，实现数据价值化的经济过程。
 
 数字产业化发展重点包括：
 
@@ -35,4 +35,18 @@
 - 区块链
 - 人工智能
 - 虚拟现实和增强现实
+
+产业数字化的典型特征：
+- 以数字科技变革生产工具；
+- 以数据资源为关键生产要素：
+- 以数字内容重构产品结构；
+- 以信息网络为市场配置纽带：
+- 以服务平台为产业生态载体；
+- 以数字善治为发展机制条件。
+
+
+数字化治理的内涵：
+- 对数据的治理
+- 运用数据进行治理
+- 对数字融合空间进行治理
 
