--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
@@ -1,4 +1,4 @@
-![image](https://github.com/wangyufengx/ruankao/assets/30011407/a23337d4-5a7c-42d8-9500-7a56e4db591a)![image](https://github.com/wangyufengx/ruankao/assets/30011407/b3b53cde-8afe-4d56-9356-0e357c04c256)# 现代化基础设施
+# 现代化基础设施
 
 > 考试大纲
 >
@@ -31,4 +31,4 @@
   - 产业技术创新基础设施等。
 
 
-  
+
