--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/1.信息与信息化.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/1.信息与信息化.md
@@ -8,3 +8,6 @@
 >
 > 3.信息化
 
+<font color="red">*信息是指音讯、消息、信息系统传输和处理的对象，泛指人类社会传播的一切形式。</font>*
+
+信息化是指在国家宏观信息政策指导下，通过信息技术开发、信息产业的发展、信息人才的配置，最大限度地利用信息资源以满足全社会的信息需求，从而加速社会各个领域的共同发展以推进信息社会发展的过程。
