--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/1.信息与信息化.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/1.信息与信息化.md
@@ -11,3 +11,69 @@
 **信息是指音讯、消息、信息系统传输和处理的对象，泛指人类社会传播的一切形式。**
 
 **信息化是指在国家宏观信息政策指导下，通过信息技术开发、信息产业的发展、信息人才的配置，最大限度地利用信息资源以满足全社会的信息需求，从而加速社会各个领域的共同发展以推进信息社会发展的过程。**
+
+## 信息
+
+信息论-> 香农
+
+信息是抽象于物质的映射集合。
+
+### 信息系统
+
+信息系统是管理模型、信息处理模型和系统实现条件的结合。
+
+- 管理模型是指系统服务对象领域的专门知识，以及分析和处理该领域问题的模型，又称为对象的处理模型。
+- 信息处理模型指系统处理信息的结构和方法。
+- 系统实现条件指可供应用的计算机技术和通信技术、从事对象领域工作的人员，以及对这些资源的控制和融合。
+
+#### 信息系统的组成部件
+
+- 硬件
+- 软件
+- 数据库
+- 网络
+- 存储设备
+- 感知设备
+- 外设
+- 人员
+- 把数据处理成信息的规程
+
+#### 从用途类型划分信息系统
+
+- 电子商务系统
+- 事务处理系统
+- 管理信息系统
+- 生产制造系统
+- 电子政务系统
+- 决策支持系统
+
+#### 信息系统的生命周期
+
+- 系统规划（可行性分析与项目开发计划）
+- 系统分析（需求分析）
+- 系统设计（概要设计、详细设计）
+- 系统实施（编码、测试）
+- 系统运行和维护
+
+## 信息化
+
+**信息化是一个动态变化的过程。信息化是指培养、发展以计算机为主的人工智能化工具为代表的新生产力，并使之造福于社会的历史过程。**
+
+### 信息化内涵
+
+- 信息网络体系
+- 信息产业基础
+- 社会运行环境
+- 效用积累过程
+
+### 国家信息化体系6要素
+
+- 信息技术应用
+- 信息资源
+- 信息网络
+- 信息技术和产业
+- 信息化人才
+- 信息化政策法规和标准规范
+
+
+
