--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/2.现代化基础设施.md
@@ -30,5 +30,57 @@
   - 科教基础设施
   - 产业技术创新基础设施等。
 
+## 工业互联网
 
+### 工业互联网平台体系四大层级
+
+1. 网络为基础
+2. 平台为中枢
+3. 数据为要素
+4. 安全为保障
+
+### 工业互联网网络体系三部分
+
+- 网络互联
+- 数据互通
+- 标识解析
+
+### 工业互联网平台体系四个层级
+
+- 边缘层
+- Iaas
+- Paas
+- Saas
+
+#### 工业互联网平台体系的四个作用
+
+1. 数据汇聚
+2. 建模分析
+3. 知识复用
+4. 应用创新
+
+### 工业互联网数据的三个特性
+
+- 重要性
+- 专业性
+- 复杂性
+
+### 工业互联网安全三大特点
+
+- 涉及范围广
+- 造成影响大
+- 企业防护基础弱
+
+### 工业互联网六大类典型应用模式
+
+1. 平台化设计
+2. 智能化制造
+3. 网络化协同
+4. 个性化定制
+5. 服务化延伸
+6. 数字化管理
+
+## 车联网
+
+车联网系统是一个“端、管、云”三层体系。
 
