--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/4.数字中国.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/4.数字中国.md
@@ -27,7 +27,7 @@
 - 数字化治理：数字化治理通常指依托互联网、大数据、人工智能等技术和应用，创新社会治理方法与手段，优化社会治理模式，推进社会治理的科学化、精细化、高效化，助力社会治理现代化。
 - 数据价值化：数据价值化是指以数据资源化为起点，经历数据资产化、数据资本化阶段，实现数据价值化的经济过程。
 
-数字产业化发展重点包括：
+#### 数字产业化发展重点包括：
 
 - 云计算
 - 大数据
@@ -36,7 +36,8 @@
 - 人工智能
 - 虚拟现实和增强现实
 
-产业数字化的典型特征：
+#### 产业数字化的典型特征：
+
 - 以数字科技变革生产工具；
 - 以数据资源为关键生产要素：
 - 以数字内容重构产品结构；
@@ -45,8 +46,40 @@
 - 以数字善治为发展机制条件。
 
 
-数字化治理的内涵：
+#### 数字化治理的内涵：
 - 对数据的治理
 - 运用数据进行治理
 - 对数字融合空间进行治理
 
+## 数字政府
+
+### 数字政府新特征
+
+- 协同化
+- 云端化
+- 智能化
+- 数据化
+- 动态化
+- 共享
+- 互通
+- 便利
+
+**一网通办、跨省通办、一网统管**
+
+## 数字社会
+
+### 智慧城市的五个核心能力要素
+
+- 数据治理
+- 数字孪生
+- 边际决策
+- 多元融合
+- 态势感知
+
+### 智慧城市发展成熟度的五个等级
+
+- 一级（规划级）
+- 二级（管理级）
+- 三级（协同级）
+- 四级（优化级）
+- 五级（引领级）
