--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/6.本章练习.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/6.本章练习.md
@@ -2,8 +2,16 @@
 
 ## 选择题
 
-1.下列说法正确的是_______。
+1. 下列说法正确的是________。
 
-  A.信息只存在家庭中        B.信息只存在图书馆中        C.信息只存在校园里      D.信息无处不在
-  
-参考答案：D
+​	 A.信息只存在家庭中        B.信息只存在图书馆中        C.信息只存在校园里      D.信息无处不在
+
+​	参考答案：D
+
+2. 信息的基础是________。
+
+​	A.数据				B.知识				C.事实				D.概念
+
+​	参考答案：A
+
+3. 
