--- a/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/6.本章练习.md
+++ b/信息系统项目管理师/考试大纲知识点整理/1.信息化发展/6.本章练习.md
@@ -14,4 +14,54 @@
 
 ​	参考答案：A
 
-3. 
+3. 工业互联网的体系不包括_____________。
+
+​	A.网络				B.平台				C.技术				D.安全
+
+​	参考答案：C
+
+4. 支持科学研究、技术开发、产品研制的具有公益属性的基础设施属于_____________。
+
+​	A.信息基础设施				B.融合基础设施				C.创新基础设施					D.网络基础设施
+
+​	参考答案：C
+
+5. GB/T 39116《智能制造能力成熟度模型》规定了企业智能制造能力在不同阶段应达到的水平。若企业应对装备、系统等开展集成，实现跨业务间的数据共享，则该企业属于______________水平。
+
+​	A.一级（规划级）				B.二级（规范级）				C.三级（集成级）			D.四级（优化级）
+
+​	参考答案：C
+
+6. 《中华人民共和国国民经济和社会发展第十四个五年规划和2035年远景目标纲要》中从数字经济、数字政府、数字社会、____________________四个维度出发勾勒了建设数字中国的宏伟蓝图。
+
+​	A.数字生态						B.数字技术						C.数字服务						D.数字人才
+
+​	参考答案：A
+
+7. _______________不属于智慧城市核心能力要素。
+
+​	A.数据治理、边际决策、多元融合
+
+​	B.数据治理、数字孪生、边际决策
+
+​	C.数据管理、数字孪生、态势感知
+
+​	D.数字孪生、多元融合、态势感知
+
+8. 智慧城市发展过程中，能够明确智慧城市发展战略、原则、目标和实施计划等，推进城市基础设施的智能化改造、多领域实现信息系统单项应用、对智慧城市全生命周期实施管理，则该智慧城市成熟度处于_______________水平。
+
+​	A.规划级						B.管理级						C.协同级						D.优化级
+
+​	参考答案：B
+
+## 思考题
+
+1. 请列出大数据的特点，并简要阐述大数据有哪些重要应用领域。
+
+
+
+2. 请简述产业数字化和数字化的关系及其意义。
+
+
+
+3. 请简述数字中国的时代特征及数字中国建设的重大意义。
